Fix header spacing on on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,3 +88,9 @@ $size: 24px;
     width: $size;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .page-title, .page-title h2 {
+    margin-bottom: 0;
+  }
+}
